--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,16 @@ dist
 
 # TernJS port file
 .tern-port
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
