--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -23,10 +23,9 @@ jobs:
     name: Run eslint scanning
     runs-on: ubuntu-latest
     permissions:
-      write-all
-      #contents: write
-      #security-events: write
-      #actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      contents: read
+      security-events: write
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -38,7 +37,7 @@ jobs:
 
       - name: Run ESLint
         run: npx eslint .
-          --config .eslintrc.js
+          --config .eslintrc.yml
           --ext .js,.jsx,.ts,.tsx
           --format @microsoft/eslint-formatter-sarif 
           --output-file eslint-results.sarif
