--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@rneui/themed": "^4.0.0-rc.6",
     "expo": "~46.0.9",
     "expo-av": "~12.0.4",
+    "expo-dev-client": "~1.2.1",
+    "expo-keep-awake": "~10.2.0",
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5",
-    "expo-keep-awake": "~10.2.0",
-    "expo-dev-client": "~1.2.1"
+    "react-native": "0.69.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "eslint": "^8.24.0",
+    "eslint-plugin-react": "^7.31.8"
   },
   "private": true
 }
