--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,4 +9,7 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: {}
+rules:
+  react/jsx-uses-react: off
+  react/react-in-jsx-scope: off
+
