--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "npx eslint . --config .eslintrc.yml --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.6",
