--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   "dependencies": {
     "@rneui/base": "^4.0.0-rc.6",
     "@rneui/themed": "^4.0.0-rc.6",
-    "expo": "~46.0.9",
+    "expo": "^1.0.0",
     "expo-av": "~12.0.4",
-    "expo-dev-client": "~1.2.1",
+    "expo-dev-client": "~1.3.1",
     "expo-keep-awake": "~10.2.0",
     "expo-speech": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
